# jsonschema-codegen

./: pyproject.toml
.github/workflows/: release.yml
src/jsonschema_codegen/: __main__.py  _interpreters.py  _resolvers.py  _utils.py  exprs.py  generator.py  parsers.py  renderers.py  resolvers.py  schema.py  types.py
src/jsonschema_codegen/templates/: annotation.jinja2  header.jinja2  object.jinja2
tests/: test_compiler.py  test_generator.py  test_interpreters.py  test_renderers.py  test_resolvers.py  test_schema.py
